--- a/code/12-finished/src/components/Meals/MealItem/MealItem.module.css
+++ b/code/12-finished/src/components/Meals/MealItem/MealItem.module.css
@@ -3,7 +3,6 @@
   justify-content: space-between;
   margin: 1rem;
   padding-bottom: 1rem;
-  border-bottom: 1px solid #ccc;
 }
 
 .meal h3 {
@@ -19,4 +18,22 @@
   font-weight: bold;
   color: #ad5502;
   font-size: 1.25rem;
+}
+
+.light {
+  border-bottom: 1px solid #ccc;
+  transition: border-bottom 150ms linear;
+}
+
+.dark {
+  border-bottom: 1px solid #fff;
+  transition: border-bottom 150ms linear;
+}
+
+.dark h3 {
+  color: white;
+}
+
+.dark .description {
+  color: white;
 }
