--- a/code/12-finished/src/components/UI/Card.module.css
+++ b/code/12-finished/src/components/UI/Card.module.css
@@ -2,5 +2,14 @@
   padding: 1rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   border-radius: 14px;
-  background-color: white;
+}
+
+.light {
+  background-color: #eee;
+  transition: background-color 150ms linear;
+}
+
+.dark {
+  background-color: #333;
+  transition: background-color 150ms linear;
 }
